--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,14 +23,13 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="60dp"
                 app:cardElevation="8dp"
                 android:layout_marginBottom="32dp">
 
                 <ImageView
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:src="@mipmap/ic_launcher"
+                    android:src="@drawable/u_launcher"
                     android:padding="16dp"/>
             </androidx.cardview.widget.CardView>
 
@@ -109,12 +108,13 @@
                         android:orientation="vertical"
                         android:gravity="center_horizontal"
                         android:layout_marginTop="32dp">
+>
 
                         <ImageView
                             android:id="@+id/ultroid_center_icon"
                             android:layout_width="120dp"
                             android:layout_height="120dp"
-                            android:src="@mipmap/ic_launcher"
+                            android:src="@drawable/u_launcher"
                             android:contentDescription="Ultroid Icon"
                             android:layout_gravity="center"
                             android:layout_marginBottom="8dp"/>
@@ -249,7 +249,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:src="@android:drawable/ic_menu_recent_history"
+        android:src="@drawable/ic_logs"
         android:tint="@android:color/white"
         app:backgroundTint="@color/ultroid_primary"
         app:fabSize="normal"/>
@@ -321,4 +321,4 @@
 
     </androidx.core.widget.NestedScrollView>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout> 
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
