--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,8 +29,7 @@
                 <ImageView
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:src="@drawable/u_launcher"
-                    android:padding="16dp"/>
+                    android:src="@drawable/u_launcher"/>
             </androidx.cardview.widget.CardView>
 
             <TextView
